--- a/style.css
+++ b/style.css
@@ -17,17 +17,27 @@ body{
     text-align: center;
     margin-bottom: 1em;
     font-family: monospace;
+    font-weight: 10;
 }
 
 #profile2 h2{
     text-align: center;
     margin-bottom: 1em;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-weight: 10;
+    line-height: 35px;
 }
+
 #profile1 #prof-img{
  height:90vh ;
  width: 70vh;
 }
+
+#profile1 #shop-img{
+    /* height:90vh ; */
+    width: 25vh;
+    margin-bottom: 1.5em;
+   }
 
 #profile1{
     margin-top: 2em;
@@ -37,7 +47,7 @@ body{
 #profile2{
     width: 70vh;
     padding: 2em;
-    margin-top: 2em;
+    margin-top: .1em;
     margin-right: 6em;
 }
 
@@ -55,4 +65,14 @@ input{
     width: 90%;
     margin-bottom: 1em;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+#profile2 button{
+    display: block;
+    width: 40%;
+    padding: .5em;
+    border-radius: .3em;
+    margin-left: 7em;
+    margin-bottom: .5em;
+    border: 1px solid;
 }
