--- a/style.css
+++ b/style.css
@@ -14,23 +14,28 @@ body{
 }
 
 #profile1 h2{
-    text-align: center;
+    text-align: left;
     margin-bottom: 1em;
-    font-family: monospace;
-    font-weight: 10;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-weight: 1000;
+    margin-left: 2em;
+    font-size: 2.5em;
 }
 
 #profile2 h2{
-    text-align: center;
+    text-align: left;
     margin-bottom: 1em;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-weight: 10;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-weight: 200;
     line-height: 35px;
+    margin-right: 2em;
+    width: 50%;
 }
 
 #profile1 #prof-img{
- height:90vh ;
- width: 70vh;
+ height:80vh ;
+ width: 60vh;
+ margin-left: 2em;
 }
 
 #profile1 #shop-img{
@@ -45,34 +50,220 @@ body{
 }
 
 #profile2{
-    width: 70vh;
+    width: 80vh;
     padding: 2em;
     margin-top: .1em;
     margin-right: 6em;
 }
 
-label,input{
+label{
     display: block;
     margin: .5em;
 }
 
 input{
-    padding: .4em;
+    padding: 1em;
     border-radius: .3em;
     border: 1px solid;
     opacity: .7;
-    background-color: azure;
+    background-color: rgb(247, 252, 252,.9);
     width: 90%;
     margin-bottom: 1em;
+    position: relative;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+#profile2 #box{
+    position: relative;
+}
+
+#togglePassword,#tg1,#tg2{
+    position: absolute;
+    top: 2.4em;
+    /* margin-right: 100px; */
+    left: 0;
+    font-size: 15px;
+    margin-left: 23em;
+    opacity: 0.5;
+}
+
+
+#togglePassword:hover,#tg1:hover,#tg2:hover{
+   cursor: pointer;
 }
 
 #profile2 button{
     display: block;
     width: 40%;
-    padding: .5em;
+    padding: 1em;
     border-radius: .3em;
-    margin-left: 7em;
+    margin-left: 0em;
     margin-bottom: .5em;
     border: 1px solid;
 }
+
+/* #bell,#user{
+    display: none;
+} */
+
+#profile2 #btn1{
+    border: 1.6px solid rgb(81, 162, 212);
+    margin-top: 1.5em;
+    margin-bottom: 1.5em;
+    font-weight: 600;
+}
+
+#profile2 #btn2{
+    background-color: rgb(140, 201, 239);
+    font-weight: 600;
+}
+
+
+#profile2 #btn2:hover{
+    cursor: pointer;
+    background-color: rgb(56, 103, 133);
+    color: whitesmoke;
+}
+
+#profile2 #btn1:hover{
+    cursor: pointer;
+    background-color: rgb(5, 33, 51);
+    color: whitesmoke;
+}
+
+#logo{
+    display: none;
+}
+
+#profile2 #btn2:active,#profile2 #btn1:active{
+    cursor: pointer;
+    background-color: rgb(8, 56, 86);
+}
+
+#fname.valid{
+    border: 2px solid green;
+}
+
+#fname.invalid{
+    border: 2px solid red;
+}
+
+#lname.valid{
+    border: 2px solid green;
+}
+
+#lname.invalid{
+    border: 2px solid red;
+}
+
+#email.valid{
+    border: 2px solid green;
+}
+
+#email.invalid{
+    border: 2px solid red;
+}
+
+#username.valid{
+    border: 2px solid green;
+}
+
+#username.invalid{
+    border: 2px solid red;
+}
+
+#password1.valid{
+    border: 2px solid green;
+}
+
+#password1.invalid{
+    border: 2px solid red;
+}
+
+#password2.valid{
+    border: 2px solid green;
+}
+
+#password2.invalid{
+    border: 2px solid red;
+}
+
+
+
+
+
+
+
+@media only screen and (max-width: 600px) {
+
+    #container{
+        display: block;
+    }
+
+
+    #profile1 #prof-img, #profile1 h2{
+        display: none;
+    }
+
+    #profile1 #shop-img{
+        margin-bottom: 0px;
+        margin-left: -2em;
+    }
+
+    #profile1{
+        display: flex;
+        justify-content: space-between;
+    }
+
+    #logo{
+        display: flex;
+        justify-content: space-between;
+    }
+
+    #bell{
+        height: 20px;
+    }
+
+    #user{
+        height: 25px;
+        margin-left: 13px;
+        margin-top: -.2em;
+    }
+
+    #profile2{
+        /* display: block; */
+        margin-right: 2em;
+        width: 100%;
+        margin-left: 0em;
+    }
+
+    #profile2 h2{
+        margin-right: 0em;
+        margin-left: -.5em;
+        padding-right: 1em;
+        width: 130%;
+        text-align: center;
+        font-size: 2em;
+        padding: 1em;
+        line-height: 39px;
+    }
+
+    #profile2 input{
+        padding: 1.2em;
+        width: 53vh;
+        margin-left: 0em;
+        margin-right: 0em;
+    }
+
+    #togglePassword,#tg1,#tg2{
+        top: 2.8em;
+        left: 0;
+        margin-left: 20.9em;
+    }
+
+    #profile2 button{
+        margin-left: 7.5em;
+    }
+  }
+  
+
