Landing Page Desktop Done

--- a/style.css
+++ b/style.css
@@ -17,12 +17,13 @@ body {
 
 /* Header Section */
 
-#landing-header {
+#main-header {
     display: flex;
     align-items: center;
     justify-content: space-between;
     height: 6rem;
     background-color: #F6FCFD;
+    box-shadow: 0px 5px 30px rgba(18, 41, 47, 0.2);
     padding: 0 2rem 0 6.25rem;
     width: 100%;
 }
@@ -33,7 +34,7 @@ body {
     width: 50%;
 }
 
-#landing-header input[type=text] {
+#main-header input[type=text] {
     display: block;
     background: transparent url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='16' height='16' class='bi bi-search' viewBox='0 0 16 16'><path fill='rgb(54,57,59)' d='M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z' ></path></svg>") no-repeat 15.5rem center;
     font-size: 1rem;
@@ -50,14 +51,14 @@ body {
     width: 60%;
 }
 
-#landing-header nav {
+#main-header nav {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     width: 45%;
 }
 
-#landing-header nav a {
+#main-header nav a {
     text-decoration: none;
     font-weight: 600;
     font-size: 1rem;
@@ -65,24 +66,24 @@ body {
     padding: 0.375rem 0;
 }
 
-#landing-header nav .active {
+#main-header nav .active {
     color: #12292F;
     border-bottom: 3px solid #FF8181;
 }
 
-#landing-header nav .inactive {
+#main-header nav .inactive {
     color: #6A7B7B;
     border-bottom: 3px solid transparent;
 }
 
-#landing-header span {
+#main-header span {
     padding: 0.375rem 0;
     color: #12292F;
     display: flex;
     align-self: flex-start;
 }
 
-#landing-header .header-status {
+#main-header .header-status {
     border: 2px solid #5CCEEB;
     border-radius: 0.3125rem;
     padding: 0.375rem 1.625rem;
@@ -93,15 +94,15 @@ body {
     transition: background .2s ease;
 }
 
-#landing-header .header-status:hover {
+/* #main-header .header-status:hover {
     background: #12292F;
     border: 2px solid #12292F;
     box-shadow: 0px 5px 15px rgba(31, 69, 78, 0.2);
     color: #C9EFF8;
     border: 0;
-}
+} */
 
-#landing-header .header-myaccount {
+#main-header .header-myaccount {
     opacity: 0;
     visibility: hidden;
     display: none;
@@ -109,15 +110,17 @@ body {
 
 /* Main Section */
 
+/* Hero Section */
+
 #landing-main {
-    padding: 0 2rem 0 6.25rem;
+    padding: 0 6.25rem;
+    margin-bottom: 16rem;
 }
 
 #landing-main .hero {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    gap: 5rem;
 }
 
 #landing-main .hero-text-btn {
@@ -139,22 +142,27 @@ body {
     line-height: 1.25rem;
     font-weight: 600;
     color: #475252;
-    width: 60%;
+    width: 68%;
 }
 
 #landing-main .hero-btn {
     display: flex;
-    gap: 0.625rem;
+    gap: 1rem;
     margin-top: 1rem;
+    width: 100%;
 }
 
 #landing-main .hero-btn a {
     text-decoration: none;
+    color:#12292F;
+    font-size: 1rem;
+    line-height: 1.25rem;
+    font-weight: 600;
 }
 
 #landing-main .hero-btn .first-btn,
 #landing-main .hero-btn .second-btn {
-    padding: 0.5rem 5rem;
+    padding: 0.8rem 4.5rem;
     border-radius: 5px;
 }
 
@@ -162,6 +170,287 @@ body {
     background: #5CCEEB;
 }
 
+#landing-main .hero-btn .second-btn {
+    border: 2px solid #5CCEEB;
+}
+
 #landing-main .hero-img {
+    display: flex;
+    justify-content: flex-end;
     width: 50%;
+}
+
+#landing-main .hero-img img {
+    width: 75%;
+}
+
+
+/* Best Prices & Ready */
+#landing-main .best-prices {
+    margin-top: 7rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+#landing-main .best-prices h2
+{
+    font-size: 3.5rem;
+    line-height: 4.76rem;
+    font-weight: 700;
+}
+
+#landing-main .best-prices p,
+#landing-main .ready p {
+    color:#475252;
+    font-size: 1rem;
+    line-height: 1.25rem;
+    font-weight: 600;
+    width: 90%;
+}
+
+#landing-main .best-prices hr,
+#landing-main .best-selling hr,
+#landing-main .top-selling hr{
+    width: 60%;
+    height: 2px;
+    margin: 10rem 0;
+    background-color: #DFE7E8;
+    border: none;
+}
+
+/* Best Selling */
+#landing-main .best-selling {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#landing-main .best-selling-container {
+    display: flex;
+    align-items: center;
+    margin-top: 1rem;
+}
+
+#landing-main .best-selling h4,
+#landing-main .top-selling h4{
+    display: flex;
+    align-self: flex-start;
+    font-size: 2.5rem;
+    font-weight: 700;
+    line-height: 3.4rem;
+    color: #12292F;
+}
+
+#landing-main .best-selling .selling-head-img {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    width: 50%;
+}
+
+#landing-main .best-selling .selling-desc {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    width: 50%;
+    gap: 1.5rem;
+}
+
+#landing-main .best-selling img {
+    width: 85%;
+}
+
+#landing-main .best-selling h5 {
+    font-size: 2rem;
+    line-height: 2.7rem;
+    font-weight: 700;
+    color: #12292F;
+}
+
+#landing-main .selling-desc a {
+    text-decoration: none;
+    color:#12292F;
+    font-size: 1rem;
+    line-height: 1.25rem;
+    font-weight: 600;
+    padding: 0.9rem 3.68rem;
+    background: #5CCEEB;
+    border-radius: 5px;
+    width: fit-content;
+}
+
+/* Top Selling Products */
+
+#landing-main .top-selling {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    margin-bottom: 2rem;
+}
+
+#landing-main .top-selling h4 {
+    font-size: 2.5rem;
+    font-weight: 700;
+    line-height: 3.4rem;
+    color: #12292F;
+    margin-bottom: 1rem;
+}
+
+/* Flex The Top Selling Products */
+#landing-main .top-selling .top-selling-flex {
+    display: flex;
+    gap: 1rem;
+    flex-wrap: wrap;
+}
+
+#landing-main .top-selling .top-product {
+    background-color: #ADE6F5;
+    width: 32%;
+    border-radius: 5px;
+    margin-bottom: 2rem;
+}
+
+#landing-main .top-selling .top-product .product-img {
+    width: 100%;
+}
+
+#landing-main .top-selling .top-selling-details {
+    padding: 1rem;
+}
+
+#landing-main .top-selling .brand-price,
+#landing-main .top-selling .reviews-star {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+/* Brand Section */
+#landing-main .top-selling .brand-price {
+    margin-bottom: 0.3rem;
+}
+
+#landing-main .top-selling .brand-price h6 {
+    font-size: 1.5rem;
+    line-height: 2rem;
+    font-weight: 700;
+    color: #12292F;
+}
+
+#landing-main .top-selling .brand-price p {
+    font-size: 1.25rem;
+    line-height: 1.5rem;
+    font-weight: 400;
+    color: #12292F;
+}
+
+/* Store and Cart */
+#landing-main .top-selling .cart-store {
+    display: flex;
+    gap: 1rem;
+    margin-bottom: 2.5rem;
+}
+
+#landing-main .top-selling .cart-store p {
+    font-size: 1.25rem;
+    line-height: 1.5rem;
+    font-weight: 400;
+    color: #475252;
+}
+
+/* Reviews and Star Section */
+#landing-main .top-selling .reviews-star {
+    margin-bottom: 1rem;
+}
+
+#landing-main .top-selling .reviews-star a {
+    font-size: 1rem;
+    line-height: 1.5rem;
+    font-weight: 600;
+    color: #475252;
+    text-decoration: none;
+}
+
+/* Ready */
+
+#landing-main .ready {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+#landing-main .ready h2 {
+    font-size: 3.5rem;
+    line-height: 4.76rem;
+    font-weight: 700;
+    margin-bottom: 0.5rem;
+}
+
+#landing-main .ready p {
+    color:#475252;
+    font-size: 1rem;
+    line-height: 1.25rem;
+    font-weight: 600;
+    width: 100%;
+}
+
+#landing-main .ready a {
+    text-decoration: none;
+    color:#12292F;
+    font-size: 1rem;
+    line-height: 1.25rem;
+    font-weight: 600;
+    padding: 0.9rem 2.5rem;
+    background: #5CCEEB;
+    border-radius: 5px;
+    margin-top: 2rem;
+}
+
+/* Footer Section */
+
+#main-footer .main-footer {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-bottom: 5rem;
+}
+
+#main-footer .footer-item {
+    display: flex;
+    flex-direction: column;
+    align-self: flex-start;
+    gap: 1rem;
+}
+
+#main-footer .footer-item a {
+    text-decoration: none;
+    color:#475252;
+    font-size: 1rem;
+    line-height: 1.5rem;
+    font-weight: 600;
+}
+
+#main-footer .footer-item h5 {
+    font-size: 2rem;
+    line-height: 2.7rem;
+    font-weight: 700;
+    color: #000000;
+    margin-bottom: 1rem;
+}
+
+#main-footer .copyright {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #12292F;
+    color: #DEF5FB;
+    text-align: center;
+    height: 3.6rem;
 }
