--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@ body{
     display: inline-flex;
     margin: auto 100px;
     margin-top: auto 100px;
-    color: black;
 }
 
 form{
@@ -30,16 +29,12 @@ button{
 }
 
 input{
-    color: #5CCEEB;
+    border: 1px solid black;
 }
 
 span,
 a{
     color: #5CCEEB;
-}
-
-.container1 img{
-    border: 172px;
 }
 
 .container h2{
@@ -48,6 +43,6 @@ a{
 }
 
 form img{
-    margin: -100px auto;
-    height: 640px;
+    margin: auto;
+    height: 550px;
 }
