--- a/style.css
+++ b/style.css
@@ -57,17 +57,13 @@ button{
 
 .text .radio{
     width: 20px;
-    margin: -0px;
+    margin: 0px;
 }
 
 input{
     border: 1px solid black;
     margin-top: 10px;
     padding-left: 30px;
-}
-
-.field textarea{
-    margin-left: 30px;
 }
 
 span,
@@ -104,7 +100,8 @@ span{
     text-decoration: none;
 }
 
-.text{
+.text,
+.sign{
     display: flex;
 }
 
@@ -115,4 +112,13 @@ span{
 h3{
     font-size: x-large;
     margin-bottom: 50px;
+}
+
+.sign span{
+    padding: 0px;
+}
+
+.sign .radio{
+    width: 20px;
+    margin: -0px;
 }
