--- a/style.css
+++ b/style.css
@@ -18,7 +18,8 @@ body {
 /* Header Section */
 
 #main-header {
-    display: flex;
+    /* display: flex; */
+    display: none;
     align-items: center;
     justify-content: space-between;
     height: 6rem;
@@ -419,7 +420,7 @@ body {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    margin-bottom: 5rem;
+    margin: 5rem 0;
 }
 
 #main-footer .footer-item {
@@ -547,7 +548,160 @@ body {
     color: #FF4242;
 }
 
-/* FAQ Tablet */
+/* Media Queries */
+/*  */
+/*  */
+
+/* Home Media Queries Tablet */
+@media screen and (min-width:720px) and (max-width:920px) {
+    
+    #landing-main .hero-text-btn h1 {
+        font-size: 3rem;
+        line-height: 4rem;
+    }
+    
+    #landing-main .hero-text-btn p {
+        font-size: 1rem;
+        line-height: 1.25rem;
+        width: 90%;
+    }
+    
+    #landing-main .hero-btn a {
+        font-size: 1rem;
+        line-height: 1.25rem;
+        font-weight: 600;
+    }
+    
+    #landing-main .hero-btn .first-btn,
+    #landing-main .hero-btn .second-btn {
+        padding: 0.8rem 1rem;
+        border-radius: 5px;
+    }
+    
+    #landing-main .hero-img {
+        display: flex;
+        justify-content: flex-end;
+        width: 50%;
+    }
+    
+    #landing-main .hero-img img {
+        width: 75%;
+    }
+    
+    
+    /* Best Prices & Ready */    
+    #landing-main .best-prices h2
+    {
+        font-size: 3rem;
+        line-height: 4rem;
+    }
+    
+    #landing-main .best-prices p,
+    #landing-main .ready p {
+        font-size: 1rem;
+        line-height: 1.25rem;
+    }
+    
+    #landing-main .best-prices hr,
+    #landing-main .best-selling hr,
+    #landing-main .top-selling hr{
+        margin: 7rem 0;
+    }
+    
+    /* Best Selling */
+    
+    #landing-main .best-selling h4,
+    #landing-main .top-selling h4{
+        font-size: 2rem;
+        line-height: 3rem;
+    }
+    
+    #landing-main .best-selling h5 {
+        font-size: 1.5rem;
+        line-height: 2rem;
+    }
+    
+    /* Top Selling Products */
+    
+    /* Flex The Top Selling Products */
+    #landing-main .top-selling .top-selling-flex {
+        display: flex;
+        gap: 3rem;
+        flex-wrap: wrap;
+    }
+    
+    #landing-main .top-selling .top-product {
+        width: 45%;
+    }
+    
+    #landing-main .top-selling .brand-price h6 {
+        font-size: 1.25rem;
+        line-height: 1.5rem;
+    }
+    
+    #landing-main .top-selling .brand-price p {
+        font-size: 1rem;
+        line-height: 1.25rem;
+    }
+    
+    /* Store and Cart */
+    
+    #landing-main .top-selling .cart-store p {
+        font-size: 1rem;
+        line-height: 1.25rem;
+    }
+    
+    /* Ready */
+    
+    #landing-main .ready h2 {
+        font-size: 2.5rem;
+        line-height: 3.5rem;
+        font-weight: 700;
+        margin-bottom: 0.5rem;
+    }
+    
+    /* Footer Section */
+    
+    #main-footer .main-footer {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: flex-end;
+        margin: 5rem 0;
+        gap: 2rem;
+        padding: 0.5rem 1;
+    }
+
+    #main-footer .foot-item {
+        width: 45%;
+    }
+    
+    #main-footer .footer-item {
+        display: flex;
+        flex-direction: column;
+        align-self: flex-start;
+        gap: 1rem;
+    }
+    
+    #main-footer .footer-item a {
+        text-decoration: none;
+        color:#475252;
+        font-size: 1rem;
+        line-height: 1.5rem;
+        font-weight: 600;
+    }
+    
+    #main-footer .footer-item h5 {
+        font-size: 2rem;
+        line-height: 2.7rem;
+        font-weight: 700;
+        color: #000000;
+        margin-bottom: 1rem;
+    }
+}
+
+
+
+/* FAQ Media Query Tablet */
 @media screen and (min-width:720px) and (max-width:920px) {
     #faq-main .faq-qna {
         gap: 2rem;
