--- a/style.css
+++ b/style.css
@@ -1,8 +1,5 @@
 body{
     background-color: white;
-    position: relative;
-    width: 1440px;
-    height: 1024px;
 }
 
 .containerS{
@@ -46,9 +43,18 @@ form{
     font-family:Arial, Helvetica, sans-serif;
 }
 
-input,
-button{
+.container2 input{
     width: 400px;
+    height: 50px;
+    font-size: medium;
+}
+.container_2 input{
+    width: 400px;
+    height: 50px;
+    font-size: medium;
+}
+button{
+    width: 434px;
     height: 50px;
     font-size: medium;
 }
@@ -71,7 +77,7 @@ a{
 }
 
 span{
-    padding-left: 170px;
+    padding-left: 166px;
 }
 
 .containerS h2{
@@ -118,7 +124,7 @@ h3{
 
 .sign .radio{
     width: 20px;
-    margin: -0px;
+    margin: 0px;
 }
 
 
